<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CreateNoteActivity">

    <Button
        android:id="@+id/saveButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="12dp"
        android:backgroundTint="@color/blackBackground"
        android:fontFamily="@font/nunito"
        android:text="@string/save"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@id/saveButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_semibold"
                android:paddingTop="16dp"
                android:text="@string/note_name"
                android:textAlignment="viewStart"
                android:textColor="#000000"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/noteName"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:textAppearance="@style/InputBoxTextStyle"
                android:textColorHint="@color/inputBoxInactiveTextColor"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxStrokeColor="@color/boxStrokeColor"
                app:boxStrokeWidth="2dp"
                app:boxStrokeWidthFocused="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                app:placeholderTextColor="@color/boxStrokeColor">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name"
                    style="@style/InputBoxTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@android:color/white"
                    android:paddingStart="0dp"
                    android:paddingTop="0dp"
                    android:paddingEnd="0dp"
                    android:paddingBottom="0dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/noteDescription"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:textAppearance="@style/InputBoxTextStyle"
                android:textColorHint="@color/inputBoxInactiveTextColor"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxStrokeColor="@color/blackBackground"
                app:boxStrokeWidth="1dp"
                app:boxStrokeWidthFocused="1dp"
                app:counterTextAppearance="@style/TextBoxCounterStyle"
                app:hintTextColor="@color/blackBackground"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/noteName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/description"
                    style="@style/InputBoxTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/description"
                    android:maxLength="120" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/noteDate"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:focusableInTouchMode="false"
                android:textAppearance="@style/InputBoxTextStyle"
                android:textColorHint="@color/inputBoxInactiveTextColor"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxStrokeColor="@color/boxStrokeColor"
                app:boxStrokeWidth="2dp"
                app:boxStrokeWidthFocused="2dp"
                app:hintAnimationEnabled="false"
                app:hintEnabled="false"
                app:layout_constraintEnd_toStartOf="@+id/calendarButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/symbolsCounter">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/date"
                    style="@style/InputBoxTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@android:color/white"
                    android:focusableInTouchMode="false"
                    android:hint="@string/note_date_hint"
                    android:inputType="date"
                    android:paddingStart="0dp"
                    android:paddingTop="0dp"
                    android:paddingEnd="0dp"
                    android:paddingBottom="0dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageButton
                android:id="@+id/calendarButton"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:background="@android:color/white"
                android:paddingStart="22dp"
                android:paddingEnd="7dp"
                app:layout_constraintBottom_toBottomOf="@+id/noteDate"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/noteDate"
                app:srcCompat="@drawable/ic_calendar" />

            <Spinner
                android:id="@+id/categorySpinner"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/category_spinner_selector"
                android:dropDownVerticalOffset="59dp"
                android:elevation="2dp"
                android:popupBackground="@drawable/spinner_dropdown_shape"
                android:prompt="@string/category"
                android:spinnerMode="dropdown"
                app:layout_constraintEnd_toStartOf="@+id/addCategoryButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/noteDate" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:elevation="5dp"
                app:layout_constraintBottom_toBottomOf="@+id/categorySpinner"
                app:layout_constraintEnd_toEndOf="@+id/categorySpinner"
                app:layout_constraintTop_toTopOf="@+id/categorySpinner"
                app:srcCompat="@drawable/dropdown_arrow" />

            <ImageButton
                android:id="@+id/addCategoryButton"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:background="@android:color/white"
                android:paddingStart="22dp"
                android:paddingEnd="7dp"
                app:layout_constraintBottom_toBottomOf="@+id/categorySpinner"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/categorySpinner"
                app:srcCompat="@drawable/ic_add_category" />

            <Spinner
                android:id="@+id/prioritySpinner"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/priority_spinner_selector"
                android:dropDownVerticalOffset="59dp"
                android:elevation="2dp"
                android:popupBackground="@drawable/spinner_dropdown_shape"
                android:prompt="@string/priority"
                android:spinnerMode="dropdown"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/categorySpinner" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:elevation="5dp"
                app:layout_constraintBottom_toBottomOf="@+id/prioritySpinner"
                app:layout_constraintEnd_toEndOf="@+id/prioritySpinner"
                app:layout_constraintTop_toTopOf="@+id/prioritySpinner"
                app:srcCompat="@drawable/dropdown_arrow" />

            <TextView
                android:id="@+id/symbolsCounter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="2dp"
                android:fontFamily="@font/nunito"
                android:text="0/50"
                android:textColor="#000000"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/noteDescription"
                app:layout_constraintTop_toBottomOf="@+id/noteDescription" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/savingLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/saving_layout_shape"
        android:elevation="10dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/savingAnimation"
            android:layout_width="207dp"
            android:layout_height="207dp"
            android:paddingStart="18dp"
            android:paddingTop="27dp"
            android:paddingEnd="18dp"
            android:paddingBottom="21dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="false"
            app:lottie_fileName="saving.json"
            app:lottie_colorFilter="@color/blackBackground"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito"
            android:paddingBottom="15dp"
            android:text="@string/saving"
            android:textColor="#000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/savingAnimation" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>